# Chromagrams

./: README.md  manifest.yaml  pyproject.toml
.github/: copilot-instructions.md
config/: CHROMAGRAMS_CONFIG.json  CHROMAGRAMS_CONFIG.json.bak
config/CHROMAGRAMS.d/: README.md
examples/: TESTS_CONFIG.py  exemplar.py  test_paths.json
src/Chromagrams/: __init__.py  config.py
src/Chromagrams/sequences/: __init__.py  fireplace.py  pulse.py
tests/: test_chromagrams_config.py  test_chromagrams_fireplace.py  test_chromagrams_pulse.py  test_chromagrams_registry_integration.py
